# bluemoxon

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .uplift.yml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_PROMPT.md  LICENSE  README.md  SECURITY.md  conftest.py  docker-compose.yml  package-lock.json  pyproject.toml  trivy.yaml
backend/: .env.example  alembic.ini  openapi.json  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0fc4653fe40b_add_image_processing_indexes_and_fix_.py  184855af397c_narrow_entity_profile_unique_constraint.py  21eb898ba04b_add_missing_condition_grade_mappings.py  2843f260f764_add_ai_connections_table.py  3c8716c1ec04_add_publisher_aliases_table.py  44275552664d_normalize_condition_grade.py  57f0cff7af60_add_unique_active_job_constraints.py  5bd4bb0308b4_normalize_condition_grade_casing.py  5d2aef44594e_add_model_id_to_analyses.py  6bd08cce6368_clean_title_years_volumes.py  6e90a0c87832_add_tiered_recommendation_fields.py  708c5a15f5bb_add_app_config_table.py  7a6d67bc123e_change_analysis_job_model_default_to_.py  7ab2385590c1_increase_percentage_column_precision.py  88779697decb_backfill_roi_pct.py  9d7720474d6d_add_admin_config_table.py  a1234567bcde_add_analysis_jobs_table.py  a1b2c3d4e5f6_add_ai_connections_column.py  a1b2c3d4e5f6_add_api_keys_table.py  a1b2c3d4e5f6_drop_entity_profile_owner_id.py  a1f2e3d4c5b6_add_failed_count_to_cleanup_jobs.py  b2c3d4e5f6a7_add_binder_operation_years.py  c3d4e5f6g7h8_add_is_background_processed_to_book_images.py  c929391b3002_initial_schema.py  d3b3c3c4dd80_backfill_tracking_active_for_in_transit_.py  d4e5f6789abc_add_user_name_fields.py  d4e5f6g7h8i9_add_image_processing_jobs_table.py  dd7f743834bc_rerun_condition_grade_normalization.py  e18f8c3b2af7_add_archive_fields.py  e44df6ab5669_add_acquisition_columns.py  e5f67890abcd_add_mfa_exempt_to_users.py  e5f6g7h8i9j0_add_entity_profiles_table.py  e9a5101c8557_add_ai_connections_column.py  f4f2fbe81faa_seed_author_publisher_binder_tiers.py  f6789012cdef_add_image_dedup_fields.py  f6g7h8i9j0k1_add_timestamps_to_entity_profiles.py  f7624c3b4e76_drop_entity_profile_owner_id.py  f85b7f976c08_add_scoring_fields.py  g7890123def0_fix_sequence_sync.py  g7h8i9j0k1l2_add_relationship_stories_to_entity_profiles.py  (+30 more)
backend/app/: __init__.py  auth.py  cache.py  cold_start.py  config.py  constants.py  data_import.py  enums.py  eval_worker.py  main.py  migrate.py  version.py  worker.py
backend/app/constants/: image_processing.py
backend/app/db/: __init__.py  migration_sql.py  session.py
backend/app/models/: __init__.py  admin_config.py  ai_connection.py  analysis.py  analysis_job.py  api_key.py  app_config.py  author.py  base.py  binder.py  book.py  carrier_circuit.py  cleanup_job.py  entity_profile.py  eval_runbook.py  eval_runbook_job.py  image.py  image_processing_job.py  notification.py  profile_generation_job.py  publisher.py  publisher_alias.py  user.py
backend/app/schemas/: __init__.py  analysis.py  analysis_job.py  book.py  common.py  entity_profile.py  entity_validation.py  eval_runbook.py  eval_runbook_job.py  image.py  migration.py  reference.py  social_circles.py  stats.py
backend/app/services/: ai_connection_parser.py  ai_profile_generator.py  analysis_parser.py  analysis_summary.py  app_config.py  archive.py  author_normalization.py  aws_clients.py  bedrock.py  binder_normalization.py  book_queries.py  circuit_breaker.py  cognito.py  cost_explorer.py  dashboard_stats.py  entity_enrichment_worker.py  entity_matching.py  entity_profile.py  entity_validation.py  eval_generation.py  fmv_lookup.py  image_cleanup.py  image_migration.py  image_processing.py  job_manager.py  listing.py  narrative_classifier.py  notifications.py  order_extractor.py  portrait_sync.py  profile_worker.py  publisher_validation.py  reference.py  retry_queue_failed.py  scoring.py  scraper.py  set_detection.py  social_circles.py  social_circles_cache.py  sqs.py  (+5 more)
backend/app/utils/: __init__.py  cdn.py  conversion.py  date_parser.py  edition_parser.py  errors.py  image_processing.py  image_utils.py  markdown_parser.py  wikidata_scoring.py
backend/app/workers/: __init__.py  (+2 more)
backend/docs/: ERROR_HANDLING.md  SESSION_LOG_2026-01-04_analysis_fixes_814_815.md  SESSION_LOG_2026-01-04_discount_and_binder_fix.md  SESSION_LOG_2026-01-04_health_migration_refactor.md  SESSION_LOG_2026-01-04_security_fix_804.md
backend/prompts/: README.md
backend/scripts/: __init__.py  benchmark_social_circles.py  cleanup_non_qualifying_profiles.py  nls_map_fallback.py  seed_author_priorities.py  validate_migration_sync.py  wikidata_portraits.py  wikidata_scoring.py
backend/tests/: conftest.py  test_acquire.py  test_ai_connection.py  test_ai_connection_parser.py  test_ai_profile_generator.py  test_analysis.py  test_analysis_parser.py  test_analysis_summary.py  test_archive.py  test_bedrock.py  test_books.py  test_boto3_caching.py  test_cache.py  test_carrier_api_models.py  test_cleanup.py  test_cleanup_job_model.py  test_condition_grade_validation.py  test_config.py  test_constants_sync.py  test_cost_explorer.py  test_cost_explorer_registry.py  test_dashboard_consolidation.py  test_date_parser.py  test_db_session.py  test_detect_garbage_images.py  test_discount_recalculation.py  test_eager_loading.py  test_ebay_import_purchase_price.py  test_edition_auto_infer.py  test_edition_parser.py  test_entity_enrichment_worker.py  test_entity_portrait.py  test_entity_profile.py  test_entity_profile_connections.py  test_enums.py  test_errors.py  test_eval_runbook.py  test_fmv_lookup.py  test_generate_analysis.py  test_health.py  (+32 more)
infra/: app.py  aws-resources.example.json  aws-resources.json  cdk.json  pyproject.toml
infra/config/: production.json  staging.json
infra/stacks/: __init__.py  api.py  auth.py  database.py  dns.py  frontend.py  network.py  pipeline.py  storage.py
infra/terraform/: .gitignore  .terraform.lock.hcl  .tflint.hcl  TERRAFORM.md  backend.tf  ecr.tf  locals.tf  main.tf  outputs.tf  providers.tf  variables.tf
(+975 files in other folders)
