[tool.poetry]
name = "bluemoxon-backend"
version = "0.1.0"
description = "BlueMoxon API - Victorian Book Collection Management"
authors = ["Mark"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
pydantic = {extras = ["email"], version = "^2.5.0"}
pydantic-settings = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
boto3 = "^1.34.0"
mangum = "^0.17.0"
python-multipart = "^0.0.6"
httpx = "^0.26.0"
markdown = "^3.5.0"
reportlab = "^4.0.0"
pillow = "^12.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
pytest-cov = "^7.0.0"
pytest-asyncio = "^0.23.0"
black = "^25.11.0"
ruff = "^0.8.0"
mypy = "^1.8.0"
httpx = "^0.26.0"
pip-audit = "^2.7.0"
bandit = "^1.7.0"  # Python SAST security scanner

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["alembic/versions/*"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "S",      # flake8-bandit (security)
    "A",      # flake8-builtins
    "T20",    # flake8-print (no print statements)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (required for FastAPI Depends)
    "S101",   # assert usage (ok in tests)
    "S104",   # binding to all interfaces (ok for containerized apps)
    "S105",   # hardcoded password detection (false positives on variable names)
    "S106",   # hardcoded password detection (false positives on variable names)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
# migrate.py has unusual import structure due to sys.path manipulation for Lambda
"app/migrate.py" = ["I001"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
